// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FaceRecognition component should match snapshot if there is an error 1`] = `
<div>
  <div
    class="centered"
  >
    <div
      class="absolute mt2"
    >
      <div
        class="mb2"
      >
        <div
          class="_loading_overlay_wrapper css-79elbk"
          data-testid="wrapper"
        >
          <div
            class="bounding-box"
            data-testid="face-location"
          />
        </div>
      </div>
      <p
        class="red f6 mv3 pa3 right-0 left-0 b bg-light-pink ba b--red br2"
        role="alert"
      >
        Oooops, there is an error
      </p>
    </div>
  </div>
</div>
`;

exports[`FaceRecognition component should match snapshot once face location is loaded 1`] = `
<div>
  <div
    class="centered"
  >
    <div
      class="absolute mt2"
    >
      <div
        class="mb2"
      >
        <div
          class="_loading_overlay_wrapper css-79elbk"
          data-testid="wrapper"
        >
          <img
            alt=""
            id="input-image"
            src=""
            width="460"
          />
          <div
            class="bounding-box"
            data-testid="face-location"
            style="top: 50px; right: 50px; bottom: 50px; left: 50px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FaceRecognition component should match snapshot whilst face location is loading 1`] = `
<div>
  <div
    class="centered"
  >
    <div
      class="absolute mt2"
    >
      <div
        class="mb2"
      >
        <div
          class="_loading_overlay_wrapper _loading_overlay_wrapper--active css-ft4slc"
          data-testid="wrapper"
        >
          <div
            class="_loading_overlay_overlay css-df17o1"
            data-testid="overlay"
          >
            <div
              class="_loading_overlay_content css-42igfv"
            >
              <div
                class="_loading_overlay_spinner css-50etie"
              >
                <svg
                  viewBox="25 25 50 50"
                >
                  <circle
                    cx="50"
                    cy="50"
                    fill="none"
                    r="20"
                    stroke-miterlimit="10"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
          <img
            alt=""
            id="input-image"
            src=""
            width="460"
          />
          <div
            class="bounding-box"
            data-testid="face-location"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
